--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
     "@openzeppelin/contracts-upgradeable": "^4.9.6",
     "fhevm": "^0.3.0",
     "@gnosis.pm/zodiac": "^1.0.2",
-    "@gnosis.pm/safe-contracts": "^1.3.0"
+    "@gnosis.pm/safe-contracts": "^1.3.0",
+    "@hyperlane-xyz/core": "^3.10.0"
 
   },
   "resolutions": {
