--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "dotenv": "^16.0.3",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
-    "ethers": "^6.8.0",
     "fs-extra": "^10.1.0",
     "hardhat": "^2.18.1",
     "hardhat-deploy": "^0.11.29",
@@ -81,7 +80,8 @@
     "fhevm": "^0.3.0",
     "@gnosis.pm/zodiac": "^1.0.2",
     "@gnosis.pm/safe-contracts": "^1.3.0",
-    "@hyperlane-xyz/core": "^3.10.0"
+    "@hyperlane-xyz/core": "^3.10.0",
+    "ethers": "5.7.2"
   },
   "resolutions": {
     "node-tfhe": "0.5.1"
