--- a/package.json
+++ b/package.json
@@ -81,8 +81,7 @@
     "fhevm": "^0.3.0",
     "@gnosis.pm/zodiac": "^1.0.2",
     "@gnosis.pm/safe-contracts": "^1.3.0",
-    "@hyperlane-xyz/core": "^3.10.0",
-    "ethers": "5.7.2"
+    "@hyperlane-xyz/core": "^3.10.0"
   },
   "resolutions": {
     "node-tfhe": "0.5.1"
