--- a/package.json
+++ b/package.json
@@ -76,12 +76,13 @@
     "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain"
   },
   "dependencies": {
+    "@gnosis.pm/safe-contracts": "^1.3.0",
+    "@gnosis.pm/zodiac": "^1.0.2",
+    "@hyperlane-xyz/core": "^3.10.0",
     "@openzeppelin/contracts": "^4.9.6",
     "@openzeppelin/contracts-upgradeable": "^4.9.6",
     "fhevm": "^0.3.0",
-    "@gnosis.pm/zodiac": "^1.0.2",
-    "@gnosis.pm/safe-contracts": "^1.3.0",
-    "@hyperlane-xyz/core": "^3.10.0"
+    "fhevmjs": "^0.4.0"
   },
   "resolutions": {
     "node-tfhe": "0.5.1"
